fix styling of summaries on smaller screens

--- a/src/grid.css
+++ b/src/grid.css
@@ -45,7 +45,7 @@
 .col-8,
 .col-9,
 .col-12 {
-    width: 100%;
+    width: 94%;
 }
 
 @media only screen and (min-width: 843px) {
